DG_A1_01:Header:Fixed header visibility on screen size change

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -125,3 +125,7 @@
         display: none;
     }
 }
+
+.hide {
+    visibility: hidden;
+}
